added grid in general file

--- a/general.css
+++ b/general.css
@@ -13,3 +13,8 @@ h2 {
 p {
     color: hsl(212, 6%, 44%);
 }
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 40px;
+}
