updated grid, width and height

--- a/general.css
+++ b/general.css
@@ -26,5 +26,6 @@ p {
 main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 40px;
+    gap: 1rem;
+    margin: 0px 100px;
 }
