--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@
 }
 
 .card-preview-1 {
-    background-color: hsl(180, 62%, 55%);
     padding: 30px;
     place-self: center;
     width: 350px;
     height: 200px;
+    border-top: solid 5px hsl(180, 62%, 55%);
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px 0px rgba(128, 128, 128, 0.589);
+
+
 }
 
 .middle-section {
@@ -18,19 +22,23 @@
 }
 
 .card-preview-2 {
-    background-color: hsl(0, 78%, 62%);
     padding: 30px;
     place-self: center;
     width: 350px;
     height: 200px;
+    border-top: solid 5px hsl(0, 78%, 62%);
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px 0px rgba(128, 128, 128, 0.589);
 }
 
 .card-preview-3 {
-    background-color: hsl(34, 97%, 64%);
     padding: 30px;
     place-self: center;
     width: 350px;
     height: 200px;
+    border-top: solid 5px hsl(34, 97%, 64%);
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px 0px rgba(128, 128, 128, 0.589);
 }
 
 .right-section {
@@ -39,10 +47,12 @@
 }
 
 .card-preview-4 {
-    background-color: hsl(212, 86%, 64%);
     padding: 30px;
     place-self: center;
     width: 350px;
     height: 200px;
+    border-top: solid 5px hsl(212, 86%, 64%);
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px 0px rgba(128, 128, 128, 0.589);
 }
 
